--- a/tictactoe.css
+++ b/tictactoe.css
@@ -8,8 +8,10 @@
 #cell7 { border-bottom: none; }
 #cell8 { border-bottom: none; border-right: none; }
 body { background-color: #ffffff; zoom: 4; }
-table { background-color: #000000; border-collapse: collapse; }
-td { border: solid #000000; background-color: #ffffff; width: 1.0em; height: 1.0em; 
+p { text-align: center; }
+table { background-color: #000000; border-collapse: collapse; 
+    width: 65px; margin-left: auto; margin-right: auto; margin-top: 40px; }
+td { border: solid #000000; background-color: #ffffff; width: 21px; height: 21px; 
     text-align: center; }
 .ready, .playing { background-color: #ffffff; }
 .winner { background-color: lightgreen; }
