--- a/tictactoe.css
+++ b/tictactoe.css
@@ -7,12 +7,19 @@
 #cell6 { border-left: none; border-bottom: none; }
 #cell7 { border-bottom: none; }
 #cell8 { border-bottom: none; border-right: none; }
-body { background-color: #ffffff; zoom: 4; }
+body { background-color: #ffffff; zoom: 2; }
 p { text-align: center; }
-table { background-color: #000000; border-collapse: collapse; 
+table { background-color: #000000; border-collapse: collapse;
     width: 65px; margin-left: auto; margin-right: auto; margin-top: 40px; }
-td { border: solid #000000; background-color: #ffffff; width: 21px; height: 21px; 
+td { border: solid #000000; background-color: #ffffff; width: 21px; height: 21px;
     text-align: center; }
 .ready, .playing { background-color: #ffffff; }
 .winner { background-color: lightgreen; }
 .draw { background-color: yellow; }
+.modal {
+    background:rgba(0,0,0,0.8);
+    color:#ffffff;
+    opacity:0;
+    text-align:center;
+    z-index:99999;
+}
